--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "@vueuse/sound": "^2.1.3",
+    "openmeteo": "^1.2.0",
     "roboto-fontface": "*",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
